anthos/config-management-with-gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-webservice
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gitlab
    networking.gke.io/managed-certificates: gitlab-certificate
spec:
  backend:
    serviceName: gitlab-webservice-default
    servicePort: 8181
  rules:
  - http:
      paths:
      - path: /admin/sidekiq/
        backend:
          serviceName: gitlab-webservice-default
          servicePort: 8080
